--- a/attendance/templates/attendance/register.html
+++ b/attendance/templates/attendance/register.html
@@ -1,6 +1,11 @@
 {% extends 'attendance/base.html' %}
 {% block title %}Register{% endblock %}
 {% block body %}
+    <style>
+        input{
+            cursor: pointer;
+        }
+    </style>
     <div class="container">
         <h2>Register here:</h2>
         <form method="POST">
