--- a/attendance/templates/attendance/base.html
+++ b/attendance/templates/attendance/base.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="{% url 'attendance:index' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            {% if user.is_authenticated %}
+            {% if user.is_authenticated and user.teacher.pk %}
                 <a class="nav-link" href="{% url 'attendance:mark_attendance' pk=user.teacher.pk %}">Attendance</a>
             {% else %}
                 <a class="nav-link" href="{% url 'attendance:login_user' %}">Attendance</a>
@@ -33,8 +33,10 @@
         </li>
         </ul>
           <ul class="nav navbar-right navbar-nav">
-              {% if user.is_authenticated %}
+              {% if user.is_authenticated and user.teacher.pk %}
                     <li><a href="{% url 'attendance:profile' pk=user.teacher.pk %}" class="nav-link"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile</a></li>
+                    <li><a href="{% url 'attendance:logout_user' %}" class="nav-link"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out</a></li>
+              {% elif user.is_authenticated %}
                     <li><a href="{% url 'attendance:logout_user' %}" class="nav-link"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out</a></li>
               {% else %}
                     <li><a href="{% url 'attendance:register' %}" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i> Register</a></li>
