--- a/attendance/templates/attendance/login.html
+++ b/attendance/templates/attendance/login.html
@@ -1,19 +1,26 @@
 {% extends 'attendance/base.html' %}
 {% block title %}Login{% endblock %}
 {% block body %}
-    <style>
-        input{
-            cursor: pointer;
-        }
-    </style>
+
     <div class="container">
     <h1>Log In:</h1>
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
-
+    <br>
     <form method="POST" action="{% url 'attendance:login_user' %}">
         {% csrf_token %}
+
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <input type="radio" name="user_type" id="principal" value="Login As Principal">
+                    <label class="control-label" for="principal">Login As Principal</label>
+
+                    <input type="radio" name="user_type" id="teacher" value="Login As Teacher" style="margin-left:20px;">
+                    <label class="control-label" for="teacher">Login As Teacher</label>
+
+                </div>
+            </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="id_username">
                     Username:
@@ -30,7 +37,7 @@
                     <input id="id_password"  name="password" type="password" class="form-control">
                 </div>
             </div>
-        <input type="submit" value="Submit" class="btn btn-primary">
+        <input type="submit" value="Submit" class="btn btn-primary" style="cursor: pointer">
     </form>
     </div>
 {% endblock %}
