--- a/attendance/templates/attendance/student_detail.html
+++ b/attendance/templates/attendance/student_detail.html
@@ -11,7 +11,8 @@
 
     <h2>{{ student.student_name }}</h2>
     <h4>Roll no: {{ student.roll_no }}</h4>
-
+    <h4>Gender: {{ student.student_gender }}</h4>
+    <h4>Class: {{ student.student_teacher.teacher_class }}-{{ student.student_teacher.teacher_section }}</h4>
     <p></p>
     <h3>{{ student.student_name }}'s Attendance: </h3>
     <p>Present: {{ student.present }}</p>
