--- a/attendance/templates/attendance/attendance_form.html
+++ b/attendance/templates/attendance/attendance_form.html
@@ -11,6 +11,7 @@
     </style>
     <div class="container">
         <center><h1>Update Student Attendance:</h1></center>
+        <center><h3>{{ date }}</h3></center>
     <p></p><br>
     {% if error %}
         <p><strong>{{ error }}</strong></p>
