--- a/attendance/templates/attendance/base.html
+++ b/attendance/templates/attendance/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="{% url 'attendance:index' %}">Brand Name</a>
+      <a class="navbar-brand" href="{% url 'attendance:index' %}">LoopEdu</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
