--- a/attendance/templates/attendance/school_detail.html
+++ b/attendance/templates/attendance/school_detail.html
@@ -2,13 +2,26 @@
 {% block title %}Welcome {{ school.principal_name }}{% endblock %}
 
 {% block body %}
+    <style >
+        .disabled {
+           pointer-events: none;
+           cursor: default;
+        }
+    </style>
+
     <div class="container">
+    	{{ message }}
         <h1>List of Teachers:</h1>
         <ol>
             {% for teacher in teachers %}
                 <li><a href="{% url 'attendance:profile' pk=teacher.id %}">{{ teacher.teacher_name }}</a> : {{ teacher.teacher_class }}-{{ teacher.teacher_section }}</li>
             {% endfor %}
         </ol>
-        <a href="{% url 'attendance:attendance_report' pk=school.pk %}" class="btn btn-success">Daily Report</a>
+        {% if attendance|length == students|length %}
+            <a href="{% url 'attendance:attendance_report' pk=school.pk %}" class="btn btn-success">Daily Report</a>
+        {% else %}
+            <a href="{% url 'attendance:attendance_report' pk=school.pk %}" class="btn btn-success disabled">Daily Report</a>
+        {% endif %}
     </div>
+    
 {% endblock %}
