Fixed detailed attendance

--- a/attendance/templates/attendance/login.html
+++ b/attendance/templates/attendance/login.html
@@ -13,11 +13,12 @@
 
             <div class="form-group">
                 <div class="col-sm-10">
+                    Login As :  
                     <input type="radio" name="user_type" id="principal" value="Login As Principal">
-                    <label class="control-label" for="principal">Login As Principal</label>
+                    <label class="control-label" for="principal">Principal</label>
 
-                    <input type="radio" name="user_type" id="teacher" value="Login As Teacher" style="margin-left:20px;">
-                    <label class="control-label" for="teacher">Login As Teacher</label>
+                    <input type="radio" name="user_type" id="teacher" value="Login As Teacher" style="margin-left:5px;">
+                    <label class="control-label" for="teacher">Teacher</label>
 
                 </div>
             </div>
