--- a/attendance/templates/attendance/about.html
+++ b/attendance/templates/attendance/about.html
@@ -4,7 +4,7 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1>Loop Education Foundation</h1>
+            <h1>Attendance app</h1>
         </div>
     </div>
 
