--- a/attendance/templates/attendance/index.html
+++ b/attendance/templates/attendance/index.html
@@ -11,10 +11,10 @@
 	    {% if user.is_authenticated %}
 	        <h1>Welcome: {{ user.username }}</h1>
 	     {% else %}
-	            <h1>Loop Education Foundation</h1>
+	            <h1>Attendance App</h1>
 	    {% endif %}
 	    <br>
-	    <a class="btn btn-primary" style="cursor: pointer;" href="http://loopeducation.org">Visit the Website</a>
+	    <!-- <a class="btn btn-primary" style="cursor: pointer;" href="http://loopeducation.org">Visit the Website</a> -->
 		</div>
 	</div>
 {% endblock %}
